--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
           <li>Zhicheng Guo, Sijie Cheng, Yile Wang, Peng Li and Yang Liu. 2023. <br/> <span id="title">Prompt-Guided Retrieval Augmentation for Non-Knowledge-Intensive Tasks</span>. <br/> In <i>Findings of ACL 2023</i>, 10896-10912. [<a href="https://aclanthology.org/2023.findings-acl.693.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2305.17653">arXiv</a>]</li>
           <li>Zonghan Yang, Peng Li, Tianyu Pang and Yang Liu. 2023. <br/> <span id="title">Improving Adversarial Robustness of Deep Equilibrium Models with Explicit Regulations Along the Neural Dynamics</span>. <br/> To appear in <i>Proceedings of ICML 2023</i>. [<a href="https://arxiv.org/abs/2306.01435">arXiv</a>] [<a href="https://github.com/minicheshire/DEQ-Regulating-Neural-Dynamics">code</a>]</li>
           <li>Zonghan Yang, Xiaoyuan Yi, Peng Li, Yang Liu and Xing Xie. 2023. <br/> <span id="title">Unified Detoxifying and Debiasing in Language Generation via Inference-time Adaptive Optimization</span>. <br/> In <i>Proceedings of ICLR 2023</i>. [<a href="https://openreview.net/pdf?id=FvevdI0aA_h">pdf</a>] [<a href="https://arxiv.org/abs/2210.04492">arXiv</a>]</li>
-          <li>Fengran Mo, Jian-Yun Nie, Kaiyu Huang, Kelong Mao, Yutao Zhu, Peng Li and Yang Liu. 2023. <br/> <span id="title">Learning to Relate to Previous Turns in Conversational Search</span>. <br/> To appear in <i>Proceedings of KDD 2023</i>. [<a href="https://arxiv.org/abs/2306.02553">arXiv</a>]</li>
+          <li>Fengran Mo, Jian-Yun Nie, Kaiyu Huang, Kelong Mao, Yutao Zhu, Peng Li and Yang Liu. 2023. <br/> <span id="title">Learning to Relate to Previous Turns in Conversational Search</span>. <br/> In <i>Proceedings of KDD 2023</i>, 1722-1732. [<a href="https://dl.acm.org/doi/pdf/10.1145/3580305.3599411">pdf</a>] [<a href="https://arxiv.org/abs/2306.02553">arXiv</a>]</li>
           <li>Jifan Yu, Hanming Li, Gan Luo, Yankai Lin, Peng Li, Jianjun Xu, Lei Hou and Bin Xu. 2023. <br/> <span id="title">Exploring the Effectiveness of Student Behavior in Prerequisite Relation Discovery for Concepts</span>. <br/> To appear in <i>Proceedings of APWeb-WAIM 2023</i>.</li>
-          <li>Wenkai Yang, Yankai Lin, Guangxiang Zhao, Peng Li, Jie Zhou and Xu Sun. 2023. <br/> <span id="title">When to Trust Aggregated Gradients: Addressing Negative Client Sampling in Federated Learning</span>. <br/> To appear in <i>Transactions on Machine Learning Research (TMLR)</i>, 2023. [<a href="https://arxiv.org/abs/2301.10400">arXiv</a>]</li>
+          <li>Wenkai Yang, Yankai Lin, Guangxiang Zhao, Peng Li, Jie Zhou and Xu Sun. 2023. <br/> <span id="title">When to Trust Aggregated Gradients: Addressing Negative Client Sampling in Federated Learning</span>. <br/> <i>Transactions on Machine Learning Research (TMLR)</i>, 2023:2835-8856. [<a href="https://openreview.net/pdf?id=v73h3bYE2Z">pdf</a>] [<a href="https://arxiv.org/abs/2301.10400">arXiv</a>] [<a href="https://github.com/keven980716/Federated_Learning_Experiments">code</a>]</li>
           <li>Yuanhang Zheng, Zhixing Tan, Peng Li and Yang Liu. 2023. <br/> <span id="title">Black-box Prompt Tuning with Subspace Learning</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2305.03518">arXiv</a>]</li>
           <li>Yuzhuang Xu, Shuo Wang, Peng Li, Xuebo Liu, Xiaolong Wang, Weidong Liu and Yang Liu. 2023. <br/> <span id="title">Pluggable Neural Machine Translation Models via Memory-augmented Adapters</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2307.06029">arXiv</a>]</li>
           <li>Zeyuan Yang, Zonghan Yang, Peng Li and Yang Liu. 2023. <br/> <span id="title">Restricted Orthogonal Gradient Projection for Continual Learning</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2301.12131">arXiv</a>]</li>
@@ -229,7 +229,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Jul 13, 2023.
+      Last-updated: Aug 09, 2023.
     </div>
   </body>
 </html>
