--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <li>Jifan Yu, Hanming Li, Gan Luo, Yankai Lin, Peng Li, Jianjun Xu, Lei Hou and Bin Xu. 2023. <br/> <span id="title">Exploring the Effectiveness of Student Behavior in Prerequisite Relation Discovery for Concepts</span>. <br/> To appear in <i>Proceedings of APWeb-WAIM 2023</i>.</li>
           <li>Wenkai Yang, Yankai Lin, Guangxiang Zhao, Peng Li, Jie Zhou and Xu Sun. 2023. <br/> <span id="title">When to Trust Aggregated Gradients: Addressing Negative Client Sampling in Federated Learning</span>. <br/> <i>Transactions on Machine Learning Research (TMLR)</i>, 2023:2835-8856. [<a href="https://openreview.net/pdf?id=v73h3bYE2Z">pdf</a>] [<a href="https://arxiv.org/abs/2301.10400">arXiv</a>] [<a href="https://github.com/keven980716/Federated_Learning_Experiments">code</a>]</li>
           <li>Qinhong Zhou, Peng Li, Yang Liu, Yuyang Guan, Qizhou Xing, Ming Chen, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">AdaDS: Adaptive Data Selection for Accelerating Pre-trained Language Model Knowledge Distillation</span>. <br/> <i>AI Open</i>, 2023(4):56-63. [<a href="https://www.sciencedirect.com/science/article/pii/S2666651023000074">pdf</a>]</li>
-          <li>Zeyuan Yang, Zonghan Yang, Yichen Liu, Peng Li and Yang Liu. 2023. <br/> <span id="title">Restricted Orthogonal Gradient Projection for Continual Learning</span>. <br/> <i>AI Open</i>, 2023(4):98-110. [<a href="https://www.sciencedirect.com/science/article/pii/S2666651023000128">pdf</a>] [<a href="https://arxiv.org/abs/2301.12131">arXiv</a>]</li>
+          <li>Zeyuan Yang, Zonghan Yang, Yichen Liu, Peng Li and Yang Liu. 2023. <br/> <span id="title">Restricted Orthogonal Gradient Projection for Continual Learning</span>. <br/> <i>AI Open</i>, 2023(4):98-110. [<a href="https://www.sciencedirect.com/science/article/pii/S2666651023000128">pdf</a>]</li>
           <li>Yuanhang Zheng, Zhixing Tan, Peng Li and Yang Liu. 2023. <br/> <span id="title">Black-box Prompt Tuning with Subspace Learning</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2305.03518">arXiv</a>]</li>
           <li>Yuzhuang Xu, Shuo Wang, Peng Li, Xuebo Liu, Xiaolong Wang, Weidong Liu and Yang Liu. 2023. <br/> <span id="title">Pluggable Neural Machine Translation Models via Memory-augmented Adapters</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2307.06029">arXiv</a>]</li>
         <h3><strong>2022</strong></h3>
@@ -231,7 +231,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Sep 03, 2023.
+      Last-updated: Sep 04, 2023.
     </div>
   </body>
 </html>
