--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
         <h3><strong>2023</strong></h3>
-           <li>Chi Chen, Ruoyu Qin, Fuwen Luo, Xiaoyue Mi, Peng Li, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Position-Enhanced Visual Instruction Tuning for Multimodal Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2308.13437">arXiv</a>]</li>
+           <li>Yuzhuang Xu, Shuo Wang, Peng Li, Fuwen Luo, Xiaolong Wang, Weidong Liu and Yang Liu. 2023. <br/> <span id="title">Exploring Large Language Models for Communication Games: An Empirical Study on Werewolf</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2309.04658">arXiv</a>]</li>
+          <li>Chi Chen, Ruoyu Qin, Fuwen Luo, Xiaoyue Mi, Peng Li, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Position-Enhanced Visual Instruction Tuning for Multimodal Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2308.13437">arXiv</a>]</li>
           <li>Kaiyu Huang, Peng Li, Jin Ma, Ting Yao and Yang Liu. 2023. <br/> <span id="title">Knowledge Transfer in Incremental Learning for Multilingual Neural Machine Translation</span>. <br/> In <i>Proceedings of ACL 2023</i>, 15286-15304. [<a href="https://aclanthology.org/2023.acl-long.852.pdf">pdf</a>] [<a href="https://github.com/THUNLP-MT/ktnmt">code</a>] <br/> <span id="highlight">(ACL 2023 Outstanding Paper)</span></li>
           <li>Qinhong Zhou, Zonghan Yang, Peng Li and Yang Liu. 2023. <br/> <span id="title">Bridging the Gap between Decision and Logits in Decision-based Knowledge Distillation for Pre-trained Language Models</span>. <br/> In <i>Proceedings of ACL 2023</i>, 13234-13248. [<a href="https://aclanthology.org/2023.acl-long.738.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2306.08909">arXiv</a>] [<a href="https://github.com/THUNLP-MT/DBKD-PLM">code</a>]</li>
           <li>Chi Chen, Peng Li, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Weakly Supervised Vision-and-Language Pre-training with Relative Representations</span>. <br/> In <i>Proceedings of ACL 2023</i>, 8341-8355. [<a href="https://aclanthology.org/2023.acl-long.464.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2305.15483">arXiv</a>] [<a href="https://github.com/THUNLP-MT/RELIT">code</a>]</li>
@@ -231,7 +232,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Sep 04, 2023.
+      Last-updated: Sep 12, 2023.
     </div>
   </body>
 </html>
