--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
           <li>Yuanhang Zheng, Zhixing Tan, Peng Li and Yang Liu. 2023. <br/> <span id="title">Black-box Prompt Tuning with Subspace Learning</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2305.03518">arXiv</a>]</li>
           <li>Yuzhuang Xu, Shuo Wang, Peng Li, Xuebo Liu, Xiaolong Wang, Weidong Liu and Yang Liu. 2023. <br/> <span id="title">Pluggable Neural Machine Translation Models via Memory-augmented Adapters</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2307.06029">arXiv</a>]</li>
         <h3><strong>2022</strong></h3>
-           <li>Chi Chen, Peng Li, Maosong Sun and Yang Liu. 2022. <br/> <span id="title">End-to-End Unsupervised Vision-and-Language Pre-training</span>. <br/> In <i>Proceedings of EMNLP 2022</i>, 10799-10810. [<a href="https://aclanthology.org/2022.emnlp-main.742.pdf">pdf</a>] [<a href="https://github.com/THUNLP-MT/E2E-UVLP">code</a>]</li>
+           <li>Chi Chen, Peng Li, Maosong Sun and Yang Liu. 2022. <br/> <span id="title">End-to-End Unsupervised Vision-and-Language Pre-training with
+Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>, 10799-10810. [<a href="https://aclanthology.org/2022.emnlp-main.742.pdf">pdf</a>] [<a href="https://github.com/THUNLP-MT/E2E-UVLP">code</a>]</li>
           <li>Shuo Wang, Peng Li, Zhixing Tan, Zhaopeng Tu, Maosong Sun and Yang Liu. 2022. <br/> <span id="title">A Template-based Method for Constrained Neural Machine Translation</span>. <br/> In <i>Proceedings of EMNLP 2022</i>, 3665-3679. [<a href="https://aclanthology.org/2022.emnlp-main.240.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2205.11255">arXiv</a>] [<a href="https://github.com/THUNLP-MT/Template-NMT">code</a>]</li>
           <li>Kaiyu Huang, Peng Li, Jin Ma and Yang Liu. 2022. <br/> <span id="title">Entropy-Based Vocabulary Substitution for Incremental Learning in Multilingual Neural Machine Translation</span>. <br/> In <i>Proceedings of EMNLP 2022</i>, 10537-10550. [<a href="https://aclanthology.org/2022.emnlp-main.720.pdf">pdf</a>] [<a href="https://github.com/koukaiu/evs">code</a>]</li>
           <li>Lan Jiang, Hao Zhou, Yankai Lin, Peng Li, Jie Zhou and Rui Jiang. 2022. <br/> <span id="title">ROSE: Robust Selective Fine-tuning for Pre-trained Language Models</span>. <br/> In <i>Proceedings of EMNLP 2022</i>, 2886-2897. [<a href="https://aclanthology.org/2022.emnlp-main.186.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2210.09658">arXiv</a>] [<a href="https://github.com/jiangllan/ROSE">code</a>]</li>
@@ -232,7 +233,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Sep 19, 2023.
+      Last-updated: Sep 26, 2023.
     </div>
   </body>
 </html>
