--- a/index.html
+++ b/index.html
@@ -111,8 +111,14 @@
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
         <h3><strong>2023</strong></h3>
-           <li>Yuzhuang Xu, Shuo Wang, Peng Li, Fuwen Luo, Xiaolong Wang, Weidong Liu and Yang Liu. 2023. <br/> <span id="title">Exploring Large Language Models for Communication Games: An Empirical Study on Werewolf</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2309.04658">arXiv</a>]</li>
+           <li>Xuanhong Li, Peng Li and Po Hu. 2023. <br/> <span id="title">Revisiting Source Context in Nearest Neighbor Machine Translation</span>. <br/> To appear in <i>Proceedings of EMNLP 2023</i>.</li>
+          <li>Zeyuan Yang, Peng Li and Yang Liu. 2023. <br/> <span id="title">Failures Pave the Way: Enhancing Large Language Models through Tuning-free Rule Accumulation</span>. <br/> To appear in <i>Proceedings of EMNLP 2023</i>.</li>
+          <li>Kaiyu Huang, Peng Li, Junpeng Liu, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Learn and Consolidate: Continual Adaptation for Zero-Shot and Multilingual Neural Machine Translation</span>. <br/> To appear in <i>Proceedings of EMNLP 2023</i>.</li>
+          <li>Yile Wang, Peng Li, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Self-Knowledge Guided Retrieval Augmentation for Large Language Models</span>. <br/> To appear in <i>Findings of EMNLP 2023</i>.</li>
+          <li>Ziyue Wang, Chi Chen, Peng Li and Yang Liu. 2023. <br/> <span id="title">Filling the Image Information Gap for VQA: Prompting Large Language Models to Proactively Ask Questions</span>. <br/> To appear in <i>Findings of EMNLP 2023</i>.</li>
+          <li>Yuzhuang Xu, Shuo Wang, Peng Li, Fuwen Luo, Xiaolong Wang, Weidong Liu and Yang Liu. 2023. <br/> <span id="title">Exploring Large Language Models for Communication Games: An Empirical Study on Werewolf</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2309.04658">arXiv</a>]</li>
           <li>Chi Chen, Ruoyu Qin, Fuwen Luo, Xiaoyue Mi, Peng Li, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Position-Enhanced Visual Instruction Tuning for Multimodal Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2308.13437">arXiv</a>] [<a href="https://github.com/PVIT-official/PVIT">code</a>] [<a href="https://huggingface.co/spaces/PVIT/pvit">Demo</a>]</li>
+          <li>Zijun Liu, Yanzhe Zhang, Peng Li, Yang Liu and Diyi Yang. 2023. <br/> <span id="title">Dynamic LLM-Agent Network: An LLM-agent Collaboration Framework with Agent Evaluation</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2310.02170">arXiv</a>] [<a href="https://github.com/SALT-NLP/DyLAN">code</a>]</li>
           <li>Kaiyu Huang, Peng Li, Jin Ma, Ting Yao and Yang Liu. 2023. <br/> <span id="title">Knowledge Transfer in Incremental Learning for Multilingual Neural Machine Translation</span>. <br/> In <i>Proceedings of ACL 2023</i>, 15286-15304. [<a href="https://aclanthology.org/2023.acl-long.852.pdf">pdf</a>] [<a href="https://github.com/THUNLP-MT/ktnmt">code</a>] <br/> <span id="highlight">(ACL 2023 Outstanding Paper)</span></li>
           <li>Qinhong Zhou, Zonghan Yang, Peng Li and Yang Liu. 2023. <br/> <span id="title">Bridging the Gap between Decision and Logits in Decision-based Knowledge Distillation for Pre-trained Language Models</span>. <br/> In <i>Proceedings of ACL 2023</i>, 13234-13248. [<a href="https://aclanthology.org/2023.acl-long.738.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2306.08909">arXiv</a>] [<a href="https://github.com/THUNLP-MT/DBKD-PLM">code</a>]</li>
           <li>Chi Chen, Peng Li, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Weakly Supervised Vision-and-Language Pre-training with Relative Representations</span>. <br/> In <i>Proceedings of ACL 2023</i>, 8341-8355. [<a href="https://aclanthology.org/2023.acl-long.464.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2305.15483">arXiv</a>] [<a href="https://github.com/THUNLP-MT/RELIT">code</a>]</li>
@@ -233,7 +239,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
     </div>
 
     <div id="last-updated">
-      Last-updated: Sep 26, 2023.
+      Last-updated: Oct 08, 2023.
     </div>
   </body>
 </html>
