--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
         <h3><strong>2023</strong></h3>
-           <li>Zeyuan Yang, Peng Li and Yang Liu. 2023. <br/> <span id="title">Failures Pave the Way: Enhancing Large Language Models through Tuning-free Rule Accumulation</span>. <br/> To appear in <i>Proceedings of EMNLP 2023</i>. [<a href="https://arxiv.org/abs/2310.15746">arXiv</a>] [<a href="https://github.com/THUNLP-MT/TRAN">code</a>]</li>
-          <li>Kaiyu Huang, Peng Li, Junpeng Liu, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Learn and Consolidate: Continual Adaptation for Zero-Shot and Multilingual Neural Machine Translation</span>. <br/> To appear in <i>Proceedings of EMNLP 2023</i>.</li>
-          <li>Xuanhong Li, Peng Li and Po Hu. 2023. <br/> <span id="title">Revisiting Source Context in Nearest Neighbor Machine Translation</span>. <br/> To appear in <i>Proceedings of EMNLP 2023</i>.</li>
-          <li>Yile Wang, Peng Li, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Self-Knowledge Guided Retrieval Augmentation for Large Language Models</span>. <br/> To appear in <i>Findings of EMNLP 2023</i>. [<a href="https://arxiv.org/abs/2310.05002">arXiv</a>]</li>
-          <li>Ziyue Wang, Chi Chen, Peng Li and Yang Liu. 2023. <br/> <span id="title">Filling the Image Information Gap for VQA: Prompting Large Language Models to Proactively Ask Questions</span>. <br/> To appear in <i>Findings of EMNLP 2023</i>. [<a href="https://arxiv.org/abs/2311.11598">arXiv</a>] [<a href="https://github.com/THUNLP-MT/FIIG">code</a>]</li>
+           <li>Zeyuan Yang, Peng Li and Yang Liu. 2023. <br/> <span id="title">Failures Pave the Way: Enhancing Large Language Models through Tuning-free Rule Accumulation</span>. <br/> In <i>Proceedings of EMNLP 2023</i>, 1751-1777. [<a href="https://aclanthology.org/2023.emnlp-main.109.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2310.15746">arXiv</a>] [<a href="https://github.com/THUNLP-MT/TRAN">code</a>]</li>
+          <li>Kaiyu Huang, Peng Li, Junpeng Liu, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Learn and Consolidate: Continual Adaptation for Zero-Shot and Multilingual Neural Machine Translation</span>. <br/> In <i>Proceedings of EMNLP 2023</i>, 13938-13951. [<a href="https://aclanthology.org/2023.emnlp-main.860.pdf">pdf</a>] [<a href="https://github.com/koukaiu/LCCA">code</a>]</li>
+          <li>Xuanhong Li, Peng Li and Po Hu. 2023. <br/> <span id="title">Revisiting Source Context in Nearest Neighbor Machine Translation</span>. <br/> In <i>Proceedings of EMNLP 2023</i>, 8087-8098. [<a href="https://aclanthology.org/2023.emnlp-main.503.pdf">pdf</a>] [<a href="https://github.com/li-xuanhong/source-context-knn-mt">code</a>]</li>
+          <li>Yile Wang, Peng Li, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Self-Knowledge Guided Retrieval Augmentation for Large Language Models</span>. <br/> In <i>Findings of EMNLP 2023</i>, 10303-10315. [<a href="https://aclanthology.org/2023.findings-emnlp.691.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2310.05002">arXiv</a>] [<a href="https://github.com/THUNLP-MT/SKR">code</a>]</li>
+          <li>Ziyue Wang, Chi Chen, Peng Li and Yang Liu. 2023. <br/> <span id="title">Filling the Image Information Gap for VQA: Prompting Large Language Models to Proactively Ask Questions</span>. <br/> In <i>Findings of EMNLP 2023</i>, 2874-2890. [<a href="https://aclanthology.org/2023.findings-emnlp.189.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2311.11598">arXiv</a>] [<a href="https://github.com/THUNLP-MT/FIIG">code</a>]</li>
           <li>Yuzhuang Xu, Shuo Wang, Peng Li, Fuwen Luo, Xiaolong Wang, Weidong Liu and Yang Liu. 2023. <br/> <span id="title">Exploring Large Language Models for Communication Games: An Empirical Study on Werewolf</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2309.04658">arXiv</a>]</li>
           <li>Chi Chen, Ruoyu Qin, Fuwen Luo, Xiaoyue Mi, Peng Li, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Position-Enhanced Visual Instruction Tuning for Multimodal Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2308.13437">arXiv</a>] [<a href="https://github.com/PVIT-official/PVIT">code</a>] [<a href="https://huggingface.co/spaces/PVIT/pvit">Demo</a>]</li>
           <li>Zijun Liu, Yanzhe Zhang, Peng Li, Yang Liu and Diyi Yang. 2023. <br/> <span id="title">Dynamic LLM-Agent Network: An LLM-agent Collaboration Framework with Agent Evaluation</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2310.02170">arXiv</a>] [<a href="https://github.com/SALT-NLP/DyLAN">code</a>]</li>
@@ -137,7 +137,7 @@
           <li>Zeyuan Yang, Zonghan Yang, Yichen Liu, Peng Li and Yang Liu. 2023. <br/> <span id="title">Restricted Orthogonal Gradient Projection for Continual Learning</span>. <br/> <i>AI Open</i>, 2023(4):98-110. [<a href="https://www.sciencedirect.com/science/article/pii/S2666651023000128">pdf</a>]</li>
           <li>Yuanhang Zheng, Zhixing Tan, Peng Li and Yang Liu. 2023. <br/> <span id="title">Black-box Prompt Tuning with Subspace Learning</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2305.03518">arXiv</a>]</li>
           <li>Yuzhuang Xu, Shuo Wang, Peng Li, Xuebo Liu, Xiaolong Wang, Weidong Liu and Yang Liu. 2023. <br/> <span id="title">Pluggable Neural Machine Translation Models via Memory-augmented Adapters</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2307.06029">arXiv</a>]</li>
-          <li>Sijie Cheng, Zhicheng Guo, Jingwen Wu, Kechen Fang, Peng Li, Huaping Liu and Yang Liu. 2023. <br/> <span id="title">Can Vision-Language Models Think from a First-Person Perspective?</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2311.15596">arXiv</a>]</li>
+          <li>Sijie Cheng, Zhicheng Guo, Jingwen Wu, Kechen Fang, Peng Li, Huaping Liu and Yang Liu. 2023. <br/> <span id="title">Can Vision-Language Models Think from a First-Person Perspective?</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2311.15596">arXiv</a>] [<a href="https://adacheng.github.io/EgoThink/">Project</a>]</li>
         <h3><strong>2022</strong></h3>
            <li>Chi Chen, Peng Li, Maosong Sun and Yang Liu. 2022. <br/> <span id="title">End-to-End Unsupervised Vision-and-Language Pre-training with
 Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>, 10799-10810. [<a href="https://aclanthology.org/2022.emnlp-main.742.pdf">pdf</a>] [<a href="https://github.com/THUNLP-MT/E2E-UVLP">code</a>]</li>
@@ -224,7 +224,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
       <h2>Professional Services</h2>
       <ul>
         <li>Senior Area Chair: AACL (2022)</li>
-        <li>Area Chair: COLING (2022), EACL (2024)</li>
+        <li>Area Chair: COLING (2022), EACL (2024)<!--, NAACL (2024)--></li>
         <li>PC Chair: YWCL (2010)</li>
         <li>Tutorial Chair: CCL (2023), CCMT (2023)</li>
         <li>Demonstration Chair: CCL (2024)</li>
@@ -242,7 +242,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
     </div>
 
     <div id="last-updated">
-      Last-updated: Nov 29, 2023.
+      Last-updated: Dec 09, 2023.
     </div>
   </body>
 </html>
