--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <li>Zonghan Yang, Peng Li, Tianyu Pang and Yang Liu. 2023. <br/> <span id="title">Improving Adversarial Robustness of Deep Equilibrium Models with Explicit Regulations Along the Neural Dynamics</span>. <br/> In <i>Proceedings of ICML 2023</i>, 39349-39364. [<a href="https://proceedings.mlr.press/v202/yang23i/yang23i.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2306.01435">arXiv</a>] [<a href="https://github.com/minicheshire/DEQ-Regulating-Neural-Dynamics">code</a>]</li>
           <li>Zonghan Yang, Xiaoyuan Yi, Peng Li, Yang Liu and Xing Xie. 2023. <br/> <span id="title">Unified Detoxifying and Debiasing in Language Generation via Inference-time Adaptive Optimization</span>. <br/> In <i>Proceedings of ICLR 2023</i>. [<a href="https://openreview.net/pdf?id=FvevdI0aA_h">pdf</a>] [<a href="https://arxiv.org/abs/2210.04492">arXiv</a>]</li>
           <li>Fengran Mo, Jian-Yun Nie, Kaiyu Huang, Kelong Mao, Yutao Zhu, Peng Li and Yang Liu. 2023. <br/> <span id="title">Learning to Relate to Previous Turns in Conversational Search</span>. <br/> In <i>Proceedings of KDD 2023</i>, 1722-1732. [<a href="https://dl.acm.org/doi/pdf/10.1145/3580305.3599411">pdf</a>] [<a href="https://arxiv.org/abs/2306.02553">arXiv</a>]</li>
-          <li>Jifan Yu, Hanming Li, Gan Luo, Yankai Lin, Peng Li, Jianjun Xu, Lei Hou and Bin Xu. 2023. <br/> <span id="title">Exploring the Effectiveness of Student Behavior in Prerequisite Relation Discovery for Concepts</span>. <br/> To appear in <i>Proceedings of APWeb-WAIM 2023</i>.</li>
+          <li>Jifan Yu, Hanming Li, Gan Luo, Yankai Lin, Peng Li, Jianjun Xu, Lei Hou and Bin Xu. 2023. <br/> <span id="title">Exploring the Effectiveness of Student Behavior in Prerequisite Relation Discovery for Concepts</span>. <br/> In <i>Proceedings of APWeb-WAIM 2023</i>.</li>
           <li>Wenkai Yang, Yankai Lin, Guangxiang Zhao, Peng Li, Jie Zhou and Xu Sun. 2023. <br/> <span id="title">When to Trust Aggregated Gradients: Addressing Negative Client Sampling in Federated Learning</span>. <br/> <i>Transactions on Machine Learning Research (TMLR)</i>, 2023:2835-8856. [<a href="https://openreview.net/pdf?id=v73h3bYE2Z">pdf</a>] [<a href="https://arxiv.org/abs/2301.10400">arXiv</a>] [<a href="https://github.com/keven980716/Federated_Learning_Experiments">code</a>]</li>
           <li>Yile Wang, Yue Zhang, Peng Li and Yang Liu. 2023. <br/> <span id="title">Gradual Syntactic Label Replacement for Language Model Pre-training</span>. <br/> <i>IEEE/ACM Transactions on Audio, Speech and Language Processing (TASLP)</i>, 2023(32):486-496. [<a href="https://ieeexplore.ieee.org/document/10315017">pdf</a>]</li>
           <li>Qinhong Zhou, Peng Li, Yang Liu, Yuyang Guan, Qizhou Xing, Ming Chen, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">AdaDS: Adaptive Data Selection for Accelerating Pre-trained Language Model Knowledge Distillation</span>. <br/> <i>AI Open</i>, 2023(4):56-63. [<a href="https://www.sciencedirect.com/science/article/pii/S2666651023000074">pdf</a>]</li>
@@ -224,11 +224,11 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
       <h2>Professional Services</h2>
       <ul>
         <li>Senior Area Chair: AACL (2022)</li>
-        <li>Area Chair: COLING (2022), EACL (2024)<!--, NAACL (2024)--></li>
+        <li>Area Chair: COLING (2022), EACL (2024), NAACL (2024)</li>
         <li>PC Chair: YWCL (2010)</li>
         <li>Tutorial Chair: CCL (2023), CCMT (2023)</li>
         <li>Demonstration Chair: CCL (2024)</li>
-        <li>Reviewer: NeurIPS (2022-2023), ICML (2022-2023), ICLR (2024),  ACL (2014, 2021-2023), EMNLP (2014, 2021-2023), NAACL (2018), CVPR (2023-2024), ICCV (2023), AAAI (2022-2024), IJCAI (2022-2023), COLING (2020,2024), ACM TIST(2015), TACL (Standing Reviewer)</li>
+        <li>Reviewer: NeurIPS (2022-2023), ICML (2022-2023), ICLR (2024),  ACL (2014, 2021-2023), EMNLP (2014, 2021-2023), NAACL (2018), CVPR (2023-2024), ICCV (2023), AAAI (2022-2024), IJCAI (2022-2023), COLING (2020,2024), ACM TIST(2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
       </ul>
     </div>
 
@@ -242,7 +242,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
     </div>
 
     <div id="last-updated">
-      Last-updated: Dec 09, 2023.
+      Last-updated: Jan 05, 2024.
     </div>
   </body>
 </html>
