--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       span#title {
         color: #3462DB;
-        font-weight: bold;
+        /*font-weight: bold;*/
       }
 
       span#me {
@@ -249,7 +249,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
     </div>
 
     <div id="last-updated">
-      Last-updated: Jan 12, 2024.
+      Last-updated: Jan 15, 2024.
     </div>
   </body>
 </html>
