--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
       <ul>
         <h3><strong>2024</strong></h3>
            <li>Yuanchun Li, Hao Wen, Weijun Wang, Xiangyu Li, Yizhen Yuan, Guohong Liu, Jiacheng Liu, Wenxing Xu, Xiang Wang, Yi Sun, Rui Kong, Yile Wang, Hanfei Geng, Jian Luan, Xuefeng Jin, Zilong Ye, Guanjing Xiong, Fan Zhang, Xiang Li, Mengwei Xu, Zhijun Li, <span id="me">Peng Li</span>, Yang Liu, Ya-Qin Zhang and Yunxin Liu. 2024. <br/> <span id="title">Personal LLM Agents: Insights and Survey about the Capability, Efficiency and Security</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2401.05459">arXiv</a>] [<a href="https://github.com/MobileLLM/Personal_LLM_Agents_Survey">Paper List</a>]</li>
+          <li>Yile Wang, Sijie Cheng, Zixin Sun, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">Speak It Out: Solving Symbol-Related Problems with Symbol-to-Language Conversion for Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2401.11725">arXiv</a>] [<a href="https://github.com/THUNLP-MT/symbol2language">code</a>]</li>
         <h3><strong>2023</strong></h3>
            <li>Zeyuan Yang, <span id="me">Peng Li</span> and Yang Liu. 2023. <br/> <span id="title">Failures Pave the Way: Enhancing Large Language Models through Tuning-free Rule Accumulation</span>. <br/> In <i>Proceedings of EMNLP 2023</i>, 1751-1777. [<a href="https://aclanthology.org/2023.emnlp-main.109.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2310.15746">arXiv</a>] [<a href="https://github.com/THUNLP-MT/TRAN">code</a>]</li>
           <li>Kaiyu Huang, <span id="me">Peng Li</span>, Junpeng Liu, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Learn and Consolidate: Continual Adaptation for Zero-Shot and Multilingual Neural Machine Translation</span>. <br/> In <i>Proceedings of EMNLP 2023</i>, 13938-13951. [<a href="https://aclanthology.org/2023.emnlp-main.860.pdf">pdf</a>] [<a href="https://github.com/koukaiu/LCCA">code</a>]</li>
@@ -231,11 +232,11 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
       <h2>Professional Services</h2>
       <ul>
         <li>Senior Area Chair: AACL (2022)</li>
-        <li>Area Chair: COLING (2022), EACL (2024), NAACL (2024)</li>
+        <li>Area Chair: COLING (2022), EACL (2024), NAACL (2024)<!--, ACL (2024)--></li>
         <li>PC Chair: YWCL (2010)</li>
         <li>Tutorial Chair: CCL (2023), CCMT (2023)</li>
         <li>Demonstration Chair: CCL (2024)</li>
-        <li>Reviewer/PC Member: NeurIPS (2022-2023), ICML (2022-2023), ICLR (2024),  ACL (2014, 2021-2023), EMNLP (2014, 2021-2023), NAACL (2018), CVPR (2023-2024), ICCV (2023), AAAI (2022-2024), IJCAI (2022-2024), COLING (2020,2024), ACM TIST(2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
+        <li>Reviewer/PC Member: NeurIPS (2022-2023), ICML (2022-2023), ICLR (2024),  ACL (2014, 2021-2023), EMNLP (2014, 2021-2023), NAACL (2018), CVPR (2023-2024), ICCV (2023), <!--ECCV (2024),-->AAAI (2022-2024), IJCAI (2022-2024), COLING (2020,2024), ACM TIST(2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
       </ul>
     </div>
 
@@ -249,7 +250,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
     </div>
 
     <div id="last-updated">
-      Last-updated: Jan 15, 2024.
+      Last-updated: Feb 06, 2024.
     </div>
   </body>
 </html>
