--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
         <h3><strong>2024</strong></h3>
-           <li>Yuanchun Li, Hao Wen, Weijun Wang, Xiangyu Li, Yizhen Yuan, Guohong Liu, Jiacheng Liu, Wenxing Xu, Xiang Wang, Yi Sun, Rui Kong, Yile Wang, Hanfei Geng, Jian Luan, Xuefeng Jin, Zilong Ye, Guanjing Xiong, Fan Zhang, Xiang Li, Mengwei Xu, Zhijun Li, <span id="me">Peng Li</span>, Yang Liu, Ya-Qin Zhang and Yunxin Liu. 2024. <br/> <span id="title">Personal LLM Agents: Insights and Survey about the Capability, Efficiency and Security</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2401.05459">arXiv</a>] [<a href="https://github.com/MobileLLM/Personal_LLM_Agents_Survey">Paper List</a>]</li>
+           <li>Zonghan Yang, An Liu, Zijun Liu, Kaiming Liu, Fangzhou Xiong, Yile Wang, Zeyuan Yang, Qingyuan Hu, Xinrui Chen, Zhenhe Zhang, Fuwen Luo, Zhicheng Guo, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">Towards Unified Alignment Between Agents, Humans, and Environment</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.07744">arXiv</a>] [<a href="https://agent-force.github.io/unified-alignment-for-agents.html">Project Webpage</a>]</li>
+          <li>Yuanchun Li, Hao Wen, Weijun Wang, Xiangyu Li, Yizhen Yuan, Guohong Liu, Jiacheng Liu, Wenxing Xu, Xiang Wang, Yi Sun, Rui Kong, Yile Wang, Hanfei Geng, Jian Luan, Xuefeng Jin, Zilong Ye, Guanjing Xiong, Fan Zhang, Xiang Li, Mengwei Xu, Zhijun Li, <span id="me">Peng Li</span>, Yang Liu, Ya-Qin Zhang and Yunxin Liu. 2024. <br/> <span id="title">Personal LLM Agents: Insights and Survey about the Capability, Efficiency and Security</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2401.05459">arXiv</a>] [<a href="https://github.com/MobileLLM/Personal_LLM_Agents_Survey">Paper List</a>]</li>
           <li>Yile Wang, Sijie Cheng, Zixin Sun, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">Speak It Out: Solving Symbol-Related Problems with Symbol-to-Language Conversion for Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2401.11725">arXiv</a>] [<a href="https://github.com/THUNLP-MT/symbol2language">code</a>]</li>
         <h3><strong>2023</strong></h3>
            <li>Zeyuan Yang, <span id="me">Peng Li</span> and Yang Liu. 2023. <br/> <span id="title">Failures Pave the Way: Enhancing Large Language Models through Tuning-free Rule Accumulation</span>. <br/> In <i>Proceedings of EMNLP 2023</i>, 1751-1777. [<a href="https://aclanthology.org/2023.emnlp-main.109.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2310.15746">arXiv</a>] [<a href="https://github.com/THUNLP-MT/TRAN">code</a>]</li>
@@ -250,7 +251,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
     </div>
 
     <div id="last-updated">
-      Last-updated: Feb 06, 2024.
+      Last-updated: Feb 13, 2024.
     </div>
   </body>
 </html>
