--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
 
     <div id="publications">
-      <h2>Publications</h2>
+      <h2>Publications & Preprints</h2>
       
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
