--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
       <h2>Professional Services</h2>
       <ul>
         <li>Senior Area Chair: AACL (2022)</li>
-        <li>Area Chair: COLING (2022), EACL (2024), NAACL (2024)<!--, ACL (2024)--></li>
+        <li>Area Chair: COLING (2022), <!--EACL (2024)--> NAACL (2024)<!--, ACL (2024)--></li>
+        <li>Action Editor: ACL Rolling Review (ARR)</li>
         <li>PC Chair: YWCL (2010)</li>
         <li>Tutorial Chair: CCL (2023), CCMT (2023)</li>
         <li>Demonstration Chair: CCL (2024)</li>
@@ -260,7 +261,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
     </div>
 
     <div id="last-updated">
-      Last-updated: Feb 22, 2024.
+      Last-updated: Feb 24, 2024.
     </div>
   </body>
 </html>
