--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
           <li>An Liu, Zonghan Yang, Zhenhe Zhang, Qingyuan Hu, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">PANDA: Preference Adaptation for Enhancing Domain-Specific Abilities of LLMs</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12835">arXiv</a>] [<a href="https://github.com/THUNLP-MT/PANDA">code</a>]</li>
           <li>Yile Wang, Sijie Cheng, Zixin Sun, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">Speak It Out: Solving Symbol-Related Problems with Symbol-to-Language Conversion for Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2401.11725">arXiv</a>] [<a href="https://github.com/THUNLP-MT/symbol2language">code</a>]</li>
           <li>Ziyue Wang, Chi Chen, Yiqi Zhu, Fuwen Luo, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang, Maosong Sun and Yang Liu. 2024. <br/> <span id="title">Browse and Concentrate: Comprehending Multimodal Content via prior-LLM Context Fusion</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12195">arXiv</a>] [<a href="https://github.com/THUNLP-MT/Brote">code</a>]</li>
+          <li>Xiaolong Wang, Yile Wang, Yuanchi Zhang, Fuwen Luo, <span id="me">Peng Li</span>, Maosong Sun and Yang Liu. 2024. <br/> <span id="title">Reasoning in Conversation: Solving Subjective Tasks through Dialogue Simulation for Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.17226">arXiv</a>]</li>
           <li>Xiaolong Wang, Yile Wang, Sijie Cheng, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">DEEM: Dynamic Experienced Expert Modeling for Stance Detection</span>. <br/> To appear in <i>Proceedings of COLING 2024</i>. [<a href="https://arxiv.org/abs/2402.15264">arXiv</a>]</li>
           <li>Yuanhang Zheng, <span id="me">Peng Li</span>, Wei Liu, Yang Liu, Jian Luan and Bin Wang. 2024. <br/> <span id="title">ToolRerank: Adaptive and Hierarchy-Aware Reranking for Tool Retrieval</span>. <br/> To appear in <i>Proceedings of COLING 2024</i>.</li>
           <li>Yuzhuang Xu, Shuo Wang, <span id="me">Peng Li</span>, Xuebo Liu, Xiaolong Wang, Weidong Liu and Yang Liu. 2024. <br/> <span id="title">Plug-and-Play Neural Machine Translation Models via Memory-augmented Adapters</span>. <br/> To appear in <i>Proceedings of COLING 2024</i>. [<a href="https://arxiv.org/abs/2307.06029">arXiv</a>]</li>
@@ -261,7 +262,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
     </div>
 
     <div id="last-updated">
-      Last-updated: Feb 27, 2024.
+      Last-updated: Feb 28, 2024.
     </div>
   </body>
 </html>
