--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <h3><strong>2024</strong></h3>
            <li>Zonghan Yang, An Liu, Zijun Liu, Kaiming Liu, Fangzhou Xiong, Yile Wang, Zeyuan Yang, Qingyuan Hu, Xinrui Chen, Zhenhe Zhang, Fuwen Luo, Zhicheng Guo, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">Towards Unified Alignment Between Agents, Humans and Environment</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.07744">arXiv</a>] [<a href="https://agent-force.github.io/unified-alignment-for-agents.html">Project Webpage</a>]</li>
           <li>Yuanchun Li, Hao Wen, Weijun Wang, Xiangyu Li, Yizhen Yuan, Guohong Liu, Jiacheng Liu, Wenxing Xu, Xiang Wang, Yi Sun, Rui Kong, Yile Wang, Hanfei Geng, Jian Luan, Xuefeng Jin, Zilong Ye, Guanjing Xiong, Fan Zhang, Xiang Li, Mengwei Xu, Zhijun Li, <span id="me">Peng Li</span>, Yang Liu, Ya-Qin Zhang and Yunxin Liu. 2024. <br/> <span id="title">Personal LLM Agents: Insights and Survey about the Capability, Efficiency and Security</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2401.05459">arXiv</a>] [<a href="https://github.com/MobileLLM/Personal_LLM_Agents_Survey">Paper List</a>]</li>
-          <li>Xuanyu Lei, Zonghan Yang, Xinrui Chen, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Scaffolding Coordinates to Promote Vision-Language Coordination in Large Multi-Modal Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12058">arXiv</a>] [<a href="https://github.com/leixy20/Scaffold">code</a>]</li>
+          <li>Xuanyu Lei, Zonghan Yang, Xinrui Chen, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Scaffolding Coordinates to Promote Vision-Language Coordination in Large Multi-Modal Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12058">arXiv</a>] [<a href="https://leixy20.github.io/scaffold_site/">Project Webpage</a>]</li>
           <li>Sijie Cheng, Zhicheng Guo, Jingwen Wu, Kechen Fang, <span id="me">Peng Li</span>, Huaping Liu and Yang Liu. 2024. <br/> <span id="title">Can Vision-Language Models Think from a First-Person Perspective?</span>. <br/> To appear in <i>Proceedings of CVPR 2024</i>. [<a href="https://arxiv.org/abs/2311.15596">arXiv</a>] [<a href="https://adacheng.github.io/EgoThink/">Project Webpage</a>]</li>
           <li>Fuwen Luo, Chi Chen, Zihao Wan, Zhaolu Kang, Qidong Yan, Yingjie Li, Xiaolong Wang, Siyu Wang, Ziyue Wang, Xiaoyue Mi, <span id="me">Peng Li</span>, Ning Ma, Maosong Sun and Yang Liu. 2024. <br/> <span id="title">CODIS: Benchmarking Context-Dependent Visual Comprehension for Multimodal Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.13607">arXiv</a>] [<a href="https://thunlp-mt.github.io/CODIS">Project Webpage</a>]</li>
           <li>Zijun Liu, Boqun Kou, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">Meta Ranking: Less Capable Language Models are Capable for Single Response Judgement</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12146">arXiv</a>] [<a href="https://github.com/THUNLP-MT/MetaRanking">code</a>]</li>
@@ -263,7 +263,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
     </div>
 
     <div id="last-updated">
-      Last-updated: Feb 29, 2024.
+      Last-updated: Mar 08, 2024.
     </div>
   </body>
 </html>
