--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <li>Ziyue Wang, Chi Chen, <span id="me">Peng Li</span> and Yang Liu. 2023. <br/> <span id="title">Filling the Image Information Gap for VQA: Prompting Large Language Models to Proactively Ask Questions</span>. <br/> In <i>Findings of EMNLP 2023</i>, 2874-2890. [<a href="https://aclanthology.org/2023.findings-emnlp.189.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2311.11598">arXiv</a>] [<a href="https://github.com/THUNLP-MT/FIIG">code</a>]</li>
           <li>Yuzhuang Xu, Shuo Wang, <span id="me">Peng Li</span>, Fuwen Luo, Xiaolong Wang, Weidong Liu and Yang Liu. 2023. <br/> <span id="title">Exploring Large Language Models for Communication Games: An Empirical Study on Werewolf</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2309.04658">arXiv</a>]</li>
           <li>Chi Chen, Ruoyu Qin, Fuwen Luo, Xiaoyue Mi, <span id="me">Peng Li</span>, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Position-Enhanced Visual Instruction Tuning for Multimodal Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2308.13437">arXiv</a>] [<a href="https://github.com/PVIT-official/PVIT">code</a>] [<a href="https://huggingface.co/spaces/PVIT/pvit">Demo</a>]</li>
-          <li>Zijun Liu, Yanzhe Zhang, <span id="me">Peng Li</span>, Yang Liu and Diyi Yang. 2023. <br/> <span id="title">Dynamic LLM-Agent Network: An LLM-agent Collaboration Framework with Agent Evaluation</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2310.02170">arXiv</a>] [<a href="https://github.com/SALT-NLP/DyLAN">code</a>]</li>
+          <li>Zijun Liu, Yanzhe Zhang, <span id="me">Peng Li</span>, Yang Liu and Diyi Yang. 2023. <br/> <span id="title">Dynamic LLM-Agent Network: An LLM-agent Collaboration Framework with Agent Team Optimization</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2310.02170">arXiv</a>] [<a href="https://github.com/SALT-NLP/DyLAN">code</a>]</li>
           <li>Kaiyu Huang, <span id="me">Peng Li</span>, Jin Ma, Ting Yao and Yang Liu. 2023. <br/> <span id="title">Knowledge Transfer in Incremental Learning for Multilingual Neural Machine Translation</span>. <br/> In <i>Proceedings of ACL 2023</i>, 15286-15304. [<a href="https://aclanthology.org/2023.acl-long.852.pdf">pdf</a>] [<a href="https://github.com/THUNLP-MT/ktnmt">code</a>] <br/> <span id="highlight">(ACL 2023 Outstanding Paper)</span></li>
           <li>Qinhong Zhou, Zonghan Yang, <span id="me">Peng Li</span> and Yang Liu. 2023. <br/> <span id="title">Bridging the Gap between Decision and Logits in Decision-based Knowledge Distillation for Pre-trained Language Models</span>. <br/> In <i>Proceedings of ACL 2023</i>, 13234-13248. [<a href="https://aclanthology.org/2023.acl-long.738.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2306.08909">arXiv</a>] [<a href="https://github.com/THUNLP-MT/DBKD-PLM">code</a>]</li>
           <li>Chi Chen, <span id="me">Peng Li</span>, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Weakly Supervised Vision-and-Language Pre-training with Relative Representations</span>. <br/> In <i>Proceedings of ACL 2023</i>, 8341-8355. [<a href="https://aclanthology.org/2023.acl-long.464.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2305.15483">arXiv</a>] [<a href="https://github.com/THUNLP-MT/RELIT">code</a>]</li>
@@ -263,7 +263,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
     </div>
 
     <div id="last-updated">
-      Last-updated: Mar 08, 2024.
+      Last-updated: Mar 09, 2024.
     </div>
   </body>
 </html>
