--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
           <li>Fuwen Luo, Chi Chen, Zihao Wan, Zhaolu Kang, Qidong Yan, Yingjie Li, Xiaolong Wang, Siyu Wang, Ziyue Wang, Xiaoyue Mi, <span id="me">Peng Li</span>, Ning Ma, Maosong Sun and Yang Liu. 2024. <br/> <span id="title">CODIS: Benchmarking Context-Dependent Visual Comprehension for Multimodal Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.13607">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CODIS">code</a>] [<a href="https://thunlp-mt.github.io/CODIS">Project Webpage</a>]</li>
           <li>Zhicheng Guo, Sijie Cheng, Hao Wang, Shihao Liang, Yujia Qin, <span id="me">Peng Li</span>, Zhiyuan Liu, Maosong Sun and Yang Liu. 2024. <br/> <span id="title">StableToolBench: Towards Stable Large-Scale Benchmarking on Tool Learning of Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2403.07714">arXiv</a>] [<a href="https://github.com/zhichengg/StableToolBench">code</a>] [<a href="https://stb.github.io/">Project Webpage</a>]</li>
           <li>Zijun Liu, Boqun Kou, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">Meta Ranking: Less Capable Language Models are Capable for Single Response Judgement</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12146">arXiv</a>] [<a href="https://github.com/THUNLP-MT/MetaRanking">code</a>]</li>
+          <li>Zonghan Yang, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">ReAct Meets ActRe: Autonomous Annotations of Agent Trajectories for Contrastive Self-Training</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2403.14589">arXiv</a>]</li>
           <li>Yuanchi Zhang, Yile Wang, Zijun Liu, Shuo Wang, Xiaolong Wang, <span id="me">Peng Li</span>, Maosong Sun and Yang Liu. 2024. <br/> <span id="title">Enhancing Multilingual Capabilities of Large Language Models through Self-Distillation from Resource-Rich Languages</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12204">arXiv</a>] [<a href="https://github.com/THUNLP-MT/SDRRL">code</a>]</li>
           <li>Chi Chen, Yiyang Du, Zheng Fang, Ziyue Wang, Fuwen Luo, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang, Maosong Sun and Yang Liu. 2024. <br/> <span id="title">Model Composition for Multimodal Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12750">arXiv</a>] [<a href="https://github.com/THUNLP-MT/ModelCompose">code</a>]</li>
           <li>An Liu, Zonghan Yang, Zhenhe Zhang, Qingyuan Hu, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">PANDA: Preference Adaptation for Enhancing Domain-Specific Abilities of LLMs</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12835">arXiv</a>] [<a href="https://github.com/THUNLP-MT/PANDA">code</a>]</li>
@@ -264,7 +265,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
     </div>
 
     <div id="last-updated">
-      Last-updated: Mar 16, 2024.
+      Last-updated: Mar 22, 2024.
     </div>
   </body>
 </html>
