--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
           <li>Xiaolong Wang, Yile Wang, Sijie Cheng, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">DEEM: Dynamic Experienced Expert Modeling for Stance Detection</span>. <br/> To appear in <i>Proceedings of COLING 2024</i>. [<a href="https://arxiv.org/abs/2402.15264">arXiv</a>]</li>
           <li>Yuanhang Zheng, <span id="me">Peng Li</span>, Wei Liu, Yang Liu, Jian Luan and Bin Wang. 2024. <br/> <span id="title">ToolRerank: Adaptive and Hierarchy-Aware Reranking for Tool Retrieval</span>. <br/> To appear in <i>Proceedings of COLING 2024</i>. [<a href="http://arxiv.org/abs/2403.06551">arXiv</a>] [<a href="https://github.com/XiaoMi/ToolRerank">code</a>]</li>
           <li>Yuzhuang Xu, Shuo Wang, <span id="me">Peng Li</span>, Xuebo Liu, Xiaolong Wang, Weidong Liu and Yang Liu. 2024. <br/> <span id="title">Plug-and-Play Neural Machine Translation Models via Memory-augmented Adapters</span>. <br/> To appear in <i>Proceedings of COLING 2024</i>. [<a href="https://arxiv.org/abs/2307.06029">arXiv</a>]</li>
+          <li>Yuanhang Zheng, Zhixing Tan, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">Black-box Prompt Tuning with Subspace Learning</span>. <br/> To appear in <i>IEEE/ACM Transactions on Audio, Speech and Language Processing (TASLP)</i>, 2024. [<a href="https://arxiv.org/abs/2305.03518">arXiv</a>]</li>
           <li>Xuanyu Lei, Zonghan Yang, Xinrui Chen, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Scaffolding Coordinates to Promote Vision-Language Coordination in Large Multi-Modal Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12058">arXiv</a>] [<a href="https://leixy20.github.io/scaffold_site/">Project Webpage</a>]</li>
           <li>Zijun Liu, Boqun Kou, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">Meta Ranking: Less Capable Language Models are Capable for Single Response Judgement</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12146">arXiv</a>] [<a href="https://github.com/THUNLP-MT/MetaRanking">code</a>]</li>
           <li>Zonghan Yang, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">ReAct Meets ActRe: When Language Agents Enjoy Training Data Autonomy</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2403.14589">arXiv</a>]</li>
@@ -159,7 +160,6 @@
           <li>Yile Wang, Yue Zhang, <span id="me">Peng Li</span> and Yang Liu. 2023. <br/> <span id="title">Gradual Syntactic Label Replacement for Language Model Pre-training</span>. <br/> <i>IEEE/ACM Transactions on Audio, Speech and Language Processing (TASLP)</i>, 2023(32):486-496. [<a href="https://ieeexplore.ieee.org/document/10315017">pdf</a>]</li>
           <li>Qinhong Zhou, <span id="me">Peng Li</span>, Yang Liu, Yuyang Guan, Qizhou Xing, Ming Chen, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">AdaDS: Adaptive Data Selection for Accelerating Pre-trained Language Model Knowledge Distillation</span>. <br/> <i>AI Open</i>, 2023(4):56-63. [<a href="https://www.sciencedirect.com/science/article/pii/S2666651023000074">pdf</a>]</li>
           <li>Zeyuan Yang, Zonghan Yang, Yichen Liu, <span id="me">Peng Li</span> and Yang Liu. 2023. <br/> <span id="title">Restricted Orthogonal Gradient Projection for Continual Learning</span>. <br/> <i>AI Open</i>, 2023(4):98-110. [<a href="https://www.sciencedirect.com/science/article/pii/S2666651023000128">pdf</a>] [<a href="https://arxiv.org/abs/2301.12131">arXiv</a>]</li>
-          <li>Yuanhang Zheng, Zhixing Tan, <span id="me">Peng Li</span> and Yang Liu. 2023. <br/> <span id="title">Black-box Prompt Tuning with Subspace Learning</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2305.03518">arXiv</a>]</li>
         <h3><strong>2022</strong></h3>
            <li>Chi Chen, <span id="me">Peng Li</span>, Maosong Sun and Yang Liu. 2022. <br/> <span id="title">End-to-End Unsupervised Vision-and-Language Pre-training with
 Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>, 10799-10810. [<a href="https://aclanthology.org/2022.emnlp-main.742.pdf">pdf</a>] [<a href="https://github.com/THUNLP-MT/E2E-UVLP">code</a>]</li>
@@ -251,7 +251,11 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
         <li>PC Chair: YWCL (2010)</li>
         <li>Tutorial Chair: CCL (2023), CCMT (2023)</li>
         <li>Demonstration Chair: CCL (2024)</li>
-        <li>Reviewer/PC Member: NeurIPS (2022-2023), ICML (2022-2024), ICLR (2024),  ACL (2014, 2021-2023), EMNLP (2014, 2021-2023), NAACL (2018), CVPR (2023-2024), ICCV (2023), ECCV (2024), AAAI (2022-2024), IJCAI (2022-2024), COLING (2020,2024), <!--BMVC (2024), -->ACM TIST(2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
+        <li>Reviewer/PC Member: NeurIPS (2022-2023), ICML (2022-2024), ICLR (2024),
+          ACL (2014, 2021-2023), EMNLP (2014, 2021-2023), NAACL (2018),
+          CVPR (2023-2024), ICCV (2023), ECCV (2024), AAAI (2022-2024),
+          IJCAI (2022-2024), COLING (2020,2024), BMVC (2024),
+          ACM TIST(2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
       </ul>
     </div>
 
@@ -265,7 +269,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of EMNLP 2022</i>,
     </div>
 
     <div id="last-updated">
-      Last-updated: May 16, 2024.
+      Last-updated: May 22, 2024.
     </div>
   </body>
 </html>
