--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <li>Xiaolong Wang, Yile Wang, Sijie Cheng, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">DEEM: Dynamic Experienced Expert Modeling for Stance Detection</span>. <br/> In <i>Proceedings of <b>COLING 2024</b></i>, 4530-4541. [<a href="https://aclanthology.org/2024.lrec-main.405.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2402.15264">arXiv</a>] [<a href="https://github.com/THUNLP-MT/DEEM">code</a>]</li>
           <li>Yuanhang Zheng, <span id="me">Peng Li</span>, Wei Liu, Yang Liu, Jian Luan and Bin Wang. 2024. <br/> <span id="title">ToolRerank: Adaptive and Hierarchy-Aware Reranking for Tool Retrieval</span>. <br/> In <i>Proceedings of <b>COLING 2024</b></i>, 16263-16273. [<a href="https://aclanthology.org/2024.lrec-main.1413.pdf">pdf</a>] [<a href="http://arxiv.org/abs/2403.06551">arXiv</a>] [<a href="https://github.com/XiaoMi/ToolRerank">code</a>]</li>
           <li>Yuzhuang Xu, Shuo Wang, <span id="me">Peng Li</span>, Xuebo Liu, Xiaolong Wang, Weidong Liu and Yang Liu. 2024. <br/> <span id="title">Pluggable Neural Machine Translation Models via Memory-augmented Adapters</span>. <br/> In <i>Proceedings of <b>COLING 2024</b></i>, 12794-12808. [<a href="https://aclanthology.org/2024.lrec-main.1120.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2307.06029">arXiv</a>] [<a href="https://github.com/xuyuzhuang11/StyleMT">code</a>]</li>
-          <li>Yuanhang Zheng, Zhixing Tan, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">Black-box Prompt Tuning with Subspace Learning</span>. <br/> To appear in <i><b>IEEE/ACM Transactions on Audio, Speech and Language Processing (TASLP)</b></i>, 2024. [<a href="https://arxiv.org/abs/2305.03518">arXiv</a>]</li>
+          <li>Yuanhang Zheng, Zhixing Tan, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">Black-box Prompt Tuning with Subspace Learning</span>. <br/> <i><b>IEEE/ACM Transactions on Audio, Speech and Language Processing (TASLP)</b></i>, 2024(32):3002-3013. [<a href="https://ieeexplore.ieee.org/document/10551912?source=authoralert">pdf</a>] [<a href="https://arxiv.org/abs/2305.03518">arXiv</a>]</li>
           <li>Xuanyu Lei, Zonghan Yang, Xinrui Chen, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Scaffolding Coordinates to Promote Vision-Language Coordination in Large Multi-Modal Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12058">arXiv</a>] [<a href="https://leixy20.github.io/scaffold_site/">Project Webpage</a>]</li>
           <li>Zijun Liu, Boqun Kou, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">Meta Ranking: Less Capable Language Models are Capable for Single Response Judgement</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12146">arXiv</a>] [<a href="https://github.com/THUNLP-MT/MetaRanking">code</a>]</li>
           <li>Zonghan Yang, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">ReAct Meets ActRe: When Language Agents Enjoy Training Data Autonomy</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2403.14589">arXiv</a>]</li>
@@ -269,7 +269,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of <b>EMNLP 2022</
     </div>
 
     <div id="last-updated">
-      Last-updated: Jun 07, 2024.
+      Last-updated: Jun 14, 2024.
     </div>
   </body>
 </html>
